# ShuntingYard

./: CMakeLists.txt  ParseMath.sln  README.md
ParseMath/: CMathTokenOperator.h  CMathTokenValue.h  IMathToken.h  Main.cpp  ParseMath.vcxproj  ParseMath.vcxproj.filters  ShuntingYard.cpp  ShuntingYard.h
